<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  -->
    <string name="app_name">The Best Toast</string>
    <!--  -->
    <string name="more_apps">More Fun Apps</string>
    <!--  -->
    <string name="main_about">About</string>
    <!--  -->
    <string name="main_exit">Exit</string>
    <!--  -->
    <string name="goButton">GO!</string>
    <!--  -->
    <string name="more_info_button">More Info</string>
    <!--  -->
    <string name="infoHeader">Let\'s Make a Toast for:</string>
    <!--  -->
    <string name="info_title">Title</string>
    <!--  -->
    <string name="font_family">Bauhaus 93</string>
    <!--  -->
    <string name="about_mid_header2">What\'s new?</string>
    <!--  -->
    <string name="number_example">-</string>
    <!--  -->
    <string name="about_mid_header3">Developer</string>
    <!--  -->
    <string name="developer_label">GooglePlay marketplace:</string>
    <!--  -->
    <string name="developer">NStudios</string>
    <!--  -->
    <string name="rate_us">Rate us!</string>
    <!--  -->
    <string name="contact_me">Contact Me!</string>
    <!--  -->
    <string name="no_info">No info!</string>
    <!--  -->
    <string name="no_google_play">You don\'t have Google Play installed.</string>
    <!--  -->
    <string name="made_in_text">Bulgaria, 2014</string>
    <!--  -->
    <string name="other_apps">Our Apps</string>
    <!--  -->
    <string name="action_share_this_app">Share</string>
    <!--  -->
    <string name="action_exit">Exit</string>

</resources>